--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@react-hook/window-size": "^3.1.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.28",
     "gsap": "^3.12.5",
