--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.28",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.429.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "resend": "^4.0.0",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
